# gh_gist-rs

./: Cargo.toml  readme.md
examples/: main.rs
src/: client.rs  constants.rs  error.rs  lib.rs  models.rs
