[package]
name = "gh_gist"
version = "0.1.0"
edition = "2024"
default-run = "gist"


[dependencies]
reqwest = { version = "0.12.22", features = ["json", "multipart"] }
serde = { version = "1.0.219", features = ["derive", "default"] }
tokio = { version = "1.46.1", features = ["full", "macros"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
mime = "0.3.17"
anyhow = "1.0.98"

[[example]]
name = "test"
path = "examples/main.rs"

[[bin]]
name = "gist"
path = "bin/main.rs"
